--- a/index.html
+++ b/index.html
@@ -5,20 +5,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FimeGeek</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
     <nav>
         <label for="" class="logo">
-            <a href="#"><img src="/imagenes/logo.png" alt="">Bienvenido</a>
+            <a href="#"><img src="/imagenes/logo.png" alt="">FimeGeek</a>
         </label>
         <ul>
-            <li><a href="#">Página 1</a></li>
-            <li><a href="#">Página 2</a></li>
+            <li><a href="/index.html">Inicio</a></li>
+            <li><a href="/productos.html">Productos</a></li>
             <li><a href="#">Página 3</a></li>
         </ul>
     </nav>
+    <h1>Bienvenido a la mejor tienda de venta de componentes para pc</h1>
+    <div id="carruselInicio" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="/imagenes/carrusel1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/imagenes/carrusel2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/imagenes/carrusel3.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <h2 class="text-center">¿Quiénes somos?</h2>
+    <p id="info">Somos una tienda de venta de componentes para PC´s de escritorio, principalmente nos destacamos en la venta de componentes gaming, aunque tambien contamos con componentes especializados para renderizado, nos ubicamos en Monterrey, Nuevo León, pero tenemos envíos a toda la república Méxicana.</p>
+    <footer class="bg-dark text-white">
+        <div class="container">
+            <nav class="row">
+                <a href="" class="col-3 text-reset text-uppercase d-flex align-items-center logo">
+                    <img src="/imagenes/logo.png" alt="">
+                </a>
+                <ul class="col-4">
+                    <li class="text-white"><a href="">Facebook</a></li>
+                    <li class="text-white"><a href="">Instagram</a></li>
+                    <li class="text-white"><a href="">Twitter</a></li>
+                    <li class="text-white"><a href="">Whatsapp</a></li>
+                </ul>
+                <h1 class="col-1 mt-3">FimeGeek</h1>
+            </nav>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
